<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triage.PastVisitVitalShow" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="55dp" >

            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/DateOfBirthPrompt" />

            <TextView
                android:id="@+id/health_card_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignParentBottom="true"
                android:text="@string/HealthCardPrompt" />

            <TextView
                android:id="@+id/name_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"
                android:text="@string/NamePrompt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginLeft="100dp" >

            <TextView
                android:id="@+id/name_older"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="TextView" />

            <TextView
                android:id="@+id/dateOfBirth_older"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="TextView" />

            <TextView
                android:id="@+id/healthcard_older"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/dateOfBirth_older"
                android:text="@string/hello_world" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/temperature_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Temperature" />

            <TextView
                android:id="@+id/systolic_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Systolic" />

            <TextView
                android:id="@+id/diastolic_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Diastolic" />

            <TextView
                android:id="@+id/blood_pressure_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Heartrate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Temperature" />

            <TextView
                android:id="@+id/_systolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Systolic" />

            <TextView
                android:id="@+id/_diastolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Diastolic" />

            <TextView
                android:id="@+id/heart_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Heartrate" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/time_taken_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeTaken" />

        <TextView
            android:id="@+id/time_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp"
        android:layout_below="@+id/linearLayout8" >

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/older_vitals_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="lookForOlderVitals"
                android:text="@string/oldVitalsButton" />

            <Button
                android:id="@+id/view_older_visits"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:onClick="goToOlderVisits"
                android:text="@string/ViewOlderVisits" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/new_vitals_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="lookForNewerVitals"
                android:text="@string/newVitalsButton" />

            <Button
                android:id="@+id/return_to_menus"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:onClick="goToMenu"
                android:text="@string/Menu" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>