<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.triage.Update_symptoms" >

    <EditText
        android:id="@+id/TemperatureEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Temperature"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/symptoms_prompt"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TemperatureEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/Update_Symptoms" />

    <TextView
        android:id="@+id/Temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/Update_Symptom" />

</RelativeLayout>
